---------------------------------------------
- Wonder Scale Website                      -
---------------------------------------------

- v1.0.1040                                 -
---------------------------------------------
- 2020-10-18                                -
---------------------------------------------
.: WSW: Task: Clone: Store Page (WSW-81)

---------------------------------------------
- 2020-10-15                                -
---------------------------------------------
.: WSW: Task: Update Store Page UI (WSW-79)
.: WSW: Task: Update Home UI (WSW-80)

---------------------------------------------
- 2020-10-11                                -
---------------------------------------------
.: WSW: Task: CLONE - Change 'page' and 'shop' to store' (WSW-78)
.: WSW: Task: Revert Ordering Service (WSM-74)

- v1.0.1031                                 -
---------------------------------------------
- 2020-08-28                                -
---------------------------------------------
.: WSM: Story: Ordering System (WSM-84)

- v1.0.1031                                 -
---------------------------------------------
- 2020-07-19                                -
---------------------------------------------
.: WSM: BugFix: QR code icon not working in firefox (WSM-165)

---------------------------------------------
- 2020-07-15                                -
---------------------------------------------
.: WSW: Task: Put image to icon (WSW-73)

- v1.0.1030                                 -
---------------------------------------------
- 2020-07-12                                -
---------------------------------------------
.: WSW: Task: Update merchant home page (WSW-71)
.: WSW: Task: Adding loading spinner (WSW-60)
.: WSW: Task: Update home icon (WSW-69)
.: WSW: BugFix: Preview page in mobile size (WSW-72)

---------------------------------------------
- 2020-07-11                                -