@@ -1,3 +1,4 @@
 <merchant-info
     [store]="store"
+    [profileImage]="profileImage"
     [isEditing]="false"></merchant-info>
