@@ -1,4 +1,5 @@
 import { Component, OnInit } from '@angular/core';
+import { environment } from '@environments/environment';
 import { Store } from '@objects/store';
 import { SharedStoreService } from '@services/shared-store.service';
 import { Subject } from 'rxjs';
@@ -11,10 +12,12 @@ import { takeUntil } from 'rxjs/operators';
 })
 export class MerchantMobileInfoComponent implements OnInit {
   store: Store;
+  profileImage: string;
   private ngUnsubscribe: Subject<any> = new Subject;
   constructor(private sharedStoreService: SharedStoreService) { 
     this.sharedStoreService.store.pipe(takeUntil(this.ngUnsubscribe)).subscribe(result => {
       this.store = result;
+      this.profileImage = this.store.profileImage ? environment.IMAGE_URL + this.store.profileImage : null;
     });
   }
 
