@@ -12,6 +12,8 @@
                 width: 100px;
                 height: 100px;
                 vertical-align: top;
+                background-color: rgba(0, 0, 0, 0.16);
+                display: inline-block;
             }
             &:hover{
                 .merchant__profile-image__edit {
@@ -333,7 +335,7 @@
     .information-container__empty {
         height: 300px;
         width: 100%;
-        background-color: rgba(0, 0, 0, .08);
+        background-color: rgba(0, 0, 0, .16);
     }
 
     .swiper-container__image{
