@@ -4,6 +4,11 @@
 
 - v1.0.1040                                 -
 ---------------------------------------------
+- 2020-10-25                                -
+---------------------------------------------
+.: WSM: BugFix: Profile Image with qrcode updated (WSW-81)
+
+---------------------------------------------
 - 2020-10-18                                -
 ---------------------------------------------
 .: WSW: Task: Clone: Store Page (WSW-81)
